--- a/google-api-test.ipynb
+++ b/google-api-test.ipynb
@@ -9,26 +9,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already up-to-date: google-api-python-client in c:\\users\\strelokask\\anaconda3\\lib\\site-packages (1.12.6)\n",
-      "Requirement already satisfied, skipping upgrade: google-auth-httplib2>=0.0.3 in c:\\users\\strelokask\\anaconda3\\lib\\site-packages (from google-api-python-client) (0.0.4)\n",
-      "Requirement already satisfied, skipping upgrade: six<2dev,>=1.13.0 in c:\\users\\strelokask\\anaconda3\\lib\\site-packages (from google-api-python-client) (1.15.0)\n",
-      "Requirement already satisfied, skipping upgrade: uritemplate<4dev,>=3.0.0 in c:\\users\\strelokask\\anaconda3\\lib\\site-packages (from google-api-python-client) (3.0.1)\n",
-      "Requirement already satisfied, skipping upgrade: httplib2<1dev,>=0.15.0 in c:\\users\\strelokask\\anaconda3\\lib\\site-packages (from google-api-python-client) (0.18.1)\n",
-      "Requirement already satisfied, skipping upgrade: google-api-core<2dev,>=1.21.0 in c:\\users\\strelokask\\anaconda3\\lib\\site-packages (from google-api-python-client) (1.23.0)\n",
-      "Requirement already satisfied, skipping upgrade: google-auth>=1.16.0 in c:\\users\\strelokask\\anaconda3\\lib\\site-packages (from google-api-python-client) (1.23.0)\n",
-      "Requirement already satisfied, skipping upgrade: setuptools>=34.0.0 in c:\\users\\strelokask\\anaconda3\\lib\\site-packages (from google-api-core<2dev,>=1.21.0->google-api-python-client) (49.2.0.post20200714)\n",
-      "Requirement already satisfied, skipping upgrade: googleapis-common-protos<2.0dev,>=1.6.0 in c:\\users\\strelokask\\anaconda3\\lib\\site-packages (from google-api-core<2dev,>=1.21.0->google-api-python-client) (1.52.0)\n",
-      "Requirement already satisfied, skipping upgrade: pytz in c:\\users\\strelokask\\anaconda3\\lib\\site-packages (from google-api-core<2dev,>=1.21.0->google-api-python-client) (2020.1)\n",
-      "Requirement already satisfied, skipping upgrade: protobuf>=3.12.0 in c:\\users\\strelokask\\anaconda3\\lib\\site-packages (from google-api-core<2dev,>=1.21.0->google-api-python-client) (3.14.0)\n",
-      "Requirement already satisfied, skipping upgrade: requests<3.0.0dev,>=2.18.0 in c:\\users\\strelokask\\anaconda3\\lib\\site-packages (from google-api-core<2dev,>=1.21.0->google-api-python-client) (2.24.0)\n",
-      "Requirement already satisfied, skipping upgrade: rsa<5,>=3.1.4; python_version >= \"3.5\" in c:\\users\\strelokask\\anaconda3\\lib\\site-packages (from google-auth>=1.16.0->google-api-python-client) (4.6)\n",
-      "Requirement already satisfied, skipping upgrade: pyasn1-modules>=0.2.1 in c:\\users\\strelokask\\anaconda3\\lib\\site-packages (from google-auth>=1.16.0->google-api-python-client) (0.2.8)\n",
-      "Requirement already satisfied, skipping upgrade: cachetools<5.0,>=2.0.0 in c:\\users\\strelokask\\anaconda3\\lib\\site-packages (from google-auth>=1.16.0->google-api-python-client) (4.1.1)\n",
-      "Requirement already satisfied, skipping upgrade: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in c:\\users\\strelokask\\anaconda3\\lib\\site-packages (from requests<3.0.0dev,>=2.18.0->google-api-core<2dev,>=1.21.0->google-api-python-client) (1.25.9)\n",
-      "Requirement already satisfied, skipping upgrade: chardet<4,>=3.0.2 in c:\\users\\strelokask\\anaconda3\\lib\\site-packages (from requests<3.0.0dev,>=2.18.0->google-api-core<2dev,>=1.21.0->google-api-python-client) (3.0.4)\n",
-      "Requirement already satisfied, skipping upgrade: idna<3,>=2.5 in c:\\users\\strelokask\\anaconda3\\lib\\site-packages (from requests<3.0.0dev,>=2.18.0->google-api-core<2dev,>=1.21.0->google-api-python-client) (2.10)\n",
-      "Requirement already satisfied, skipping upgrade: certifi>=2017.4.17 in c:\\users\\strelokask\\anaconda3\\lib\\site-packages (from requests<3.0.0dev,>=2.18.0->google-api-core<2dev,>=1.21.0->google-api-python-client) (2020.6.20)\n",
-      "Requirement already satisfied, skipping upgrade: pyasn1>=0.1.3 in c:\\users\\strelokask\\anaconda3\\lib\\site-packages (from rsa<5,>=3.1.4; python_version >= \"3.5\"->google-auth>=1.16.0->google-api-python-client) (0.4.8)\n",
+      "Requirement already up-to-date: google-api-python-client in c:\\programdata\\anaconda3\\lib\\site-packages (1.12.8)\n",
+      "Requirement already satisfied, skipping upgrade: google-api-core<2dev,>=1.21.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from google-api-python-client) (1.23.0)\n",
+      "Requirement already satisfied, skipping upgrade: six<2dev,>=1.13.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from google-api-python-client) (1.15.0)\n",
+      "Requirement already satisfied, skipping upgrade: uritemplate<4dev,>=3.0.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from google-api-python-client) (3.0.1)\n",
+      "Requirement already satisfied, skipping upgrade: httplib2<1dev,>=0.15.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from google-api-python-client) (0.18.1)\n",
+      "Requirement already satisfied, skipping upgrade: google-auth-httplib2>=0.0.3 in c:\\programdata\\anaconda3\\lib\\site-packages (from google-api-python-client) (0.0.4)\n",
+      "Requirement already satisfied, skipping upgrade: google-auth>=1.16.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from google-api-python-client) (1.23.0)\n",
+      "Requirement already satisfied, skipping upgrade: googleapis-common-protos<2.0dev,>=1.6.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from google-api-core<2dev,>=1.21.0->google-api-python-client) (1.52.0)\n",
+      "Requirement already satisfied, skipping upgrade: setuptools>=34.0.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from google-api-core<2dev,>=1.21.0->google-api-python-client) (49.2.0.post20200714)\n",
+      "Requirement already satisfied, skipping upgrade: protobuf>=3.12.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from google-api-core<2dev,>=1.21.0->google-api-python-client) (3.14.0)\n",
+      "Requirement already satisfied, skipping upgrade: pytz in c:\\programdata\\anaconda3\\lib\\site-packages (from google-api-core<2dev,>=1.21.0->google-api-python-client) (2020.1)\n",
+      "Requirement already satisfied, skipping upgrade: requests<3.0.0dev,>=2.18.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from google-api-core<2dev,>=1.21.0->google-api-python-client) (2.24.0)\n",
+      "Requirement already satisfied, skipping upgrade: pyasn1-modules>=0.2.1 in c:\\programdata\\anaconda3\\lib\\site-packages (from google-auth>=1.16.0->google-api-python-client) (0.2.8)\n",
+      "Requirement already satisfied, skipping upgrade: rsa<5,>=3.1.4; python_version >= \"3.5\" in c:\\programdata\\anaconda3\\lib\\site-packages (from google-auth>=1.16.0->google-api-python-client) (4.6)\n",
+      "Requirement already satisfied, skipping upgrade: cachetools<5.0,>=2.0.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from google-auth>=1.16.0->google-api-python-client) (4.1.1)\n",
+      "Requirement already satisfied, skipping upgrade: idna<3,>=2.5 in c:\\programdata\\anaconda3\\lib\\site-packages (from requests<3.0.0dev,>=2.18.0->google-api-core<2dev,>=1.21.0->google-api-python-client) (2.10)\n",
+      "Requirement already satisfied, skipping upgrade: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in c:\\programdata\\anaconda3\\lib\\site-packages (from requests<3.0.0dev,>=2.18.0->google-api-core<2dev,>=1.21.0->google-api-python-client) (1.25.9)\n",
+      "Requirement already satisfied, skipping upgrade: certifi>=2017.4.17 in c:\\programdata\\anaconda3\\lib\\site-packages (from requests<3.0.0dev,>=2.18.0->google-api-core<2dev,>=1.21.0->google-api-python-client) (2020.6.20)\n",
+      "Requirement already satisfied, skipping upgrade: chardet<4,>=3.0.2 in c:\\programdata\\anaconda3\\lib\\site-packages (from requests<3.0.0dev,>=2.18.0->google-api-core<2dev,>=1.21.0->google-api-python-client) (3.0.4)\n",
+      "Requirement already satisfied, skipping upgrade: pyasn1<0.5.0,>=0.4.6 in c:\\programdata\\anaconda3\\lib\\site-packages (from pyasn1-modules>=0.2.1->google-auth>=1.16.0->google-api-python-client) (0.4.8)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -44,7 +44,9 @@
    "outputs": [],
    "source": [
     "from google.oauth2 import service_account\n",
-    "from googleapiclient.discovery import build"
+    "from googleapiclient.discovery import build\n",
+    "import pprint\n",
+    "pp = pprint.PrettyPrinter(indent=4)"
    ]
   },
   {
@@ -74,7 +76,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = service.files().list(fields=\"files(id, parents, name, mimeType)\").execute()\n",
+    "results = service.files().list(pageSize=10,\n",
+    "                               fields=\"nextPageToken, files(id, name, mimeType, parents)\").execute()\n",
+    "nextPageToken = results.get('nextPageToken')\n",
+    "while nextPageToken:\n",
+    "        nextPage = service.files().list(pageSize=10,\n",
+    "                                        fields=\"nextPageToken, files(id, name, mimeType, parents)\",\n",
+    "                                        pageToken=nextPageToken).execute()\n",
+    "        nextPageToken = nextPage.get('nextPageToken')\n",
+    "        results['files'] = results['files'] + nextPage['files']\n",
     "all_folders = [];\n",
     "for res in results['files']:\n",
     "    if res['mimeType'] == 'application/vnd.google-apps.folder':\n",
@@ -98,8 +108,8 @@
     "    for item in items:\n",
     "        if folder_id == item['id']:\n",
     "            if \"parents\" in item:\n",
-    "                return find_full_path(items, item['parents'][0], item['name']+'/'+ res )\n",
-    "            return item['name']+'/'+ res;\n",
+    "                return find_full_path(items, item['parents'][0], item['name']+'/'+ res)\n",
+    "            return item['name']+'/'+ res\n",
     "    return res"
    ]
   },
@@ -112,21 +122,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['gs://project/List1/Sphera Bold/women/Alpha-W-6/20.jpg, Alpha-W-6']\n"
+      "List1/Sphera Bold/women/Alpha-W-6/\n",
+      "List1/Sphera Bold/women/Alpha-W-7/\n",
+      "List1/Sphera Bold/women/Zeta-W-5/\n",
+      "List1/Sphera Bold/toddler/Alpha-T-8/\n",
+      "List1/Sphera Bold/toddler/Alpha-T-9/\n",
+      "List1/Sphera Bold/women/Delta-W-1/\n",
+      "List1/Sphera Bold/toddler/Zeta-T-8/\n",
+      "List1/Sphera Bold/men/Alpha-M-2/\n",
+      "List1/Sphera Bold/toddler/Beta-T-4/\n",
+      "List1/Sphera Bold/men/Zeta-M-2/\n",
+      "List1/Sphera Bold/men/Zeta-M-4/\n",
+      "List1/Sphera Bold/men/Alpha-M-4/\n",
+      "List1/Sphera Bold/men/Alpha-M-5/\n",
+      "List1/Sphera Bold/men/Alpha-M-3/\n",
+      "List1/Sphera Bold/men/Zeta-M-3/\n",
+      "List1/Sphera Bold/men/Zeta-M-1/\n",
+      "List1/Sphera Bold/men/Beta-M-3/\n",
+      "List1/Sphera Bold/men/Alpha-M-1/\n",
+      "List1/Sphera Bold/men/Beta-M-2/\n"
      ]
     }
    ],
    "source": [
-    "full_path_image = []\n",
-    "full_path_empty_folder = []\n",
+    "full_path_image, full_path_empty_folder = [], []\n",
+    "path_for_ = []\n",
+    "root_folders = []\n",
+    "\n",
     "for f in all_folders:\n",
+    "    c = 0\n",
     "    if len(f['images']) > 0:\n",
     "        full_path = find_full_path(results['files'], f['folder_id'], '')\n",
+    "        print(full_path)\n",
     "        for img in f['images']:\n",
-    "            full_path_image.append(['gs://project/' + full_path + img + ', ' + f['folder_name']])\n",
+    "            full_path_image.append(['gs://project/' + str(full_path) + img + ', ' + f['folder_name']])\n",
     "    else:\n",
     "        path = find_full_path(results['files'], f['folder_id'], '')\n",
-    "        full_path_empty_folder.append([path[:-1]])"
+    "        for char in path:\n",
+    "            if char == '/':\n",
+    "                c += 1\n",
+    "        if c == 4:\n",
+    "            full_path_empty_folder.append([path[:-1]])"
    ]
   },
   {
@@ -138,13 +174,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: oauth2client in c:\\users\\strelokask\\anaconda3\\lib\\site-packages (4.1.3)Note: you may need to restart the kernel to use updated packages.\n",
-      "\n",
-      "Requirement already satisfied: six>=1.6.1 in c:\\users\\strelokask\\anaconda3\\lib\\site-packages (from oauth2client) (1.15.0)\n",
-      "Requirement already satisfied: pyasn1>=0.1.7 in c:\\users\\strelokask\\anaconda3\\lib\\site-packages (from oauth2client) (0.4.8)\n",
-      "Requirement already satisfied: httplib2>=0.9.1 in c:\\users\\strelokask\\anaconda3\\lib\\site-packages (from oauth2client) (0.18.1)\n",
-      "Requirement already satisfied: rsa>=3.1.4 in c:\\users\\strelokask\\anaconda3\\lib\\site-packages (from oauth2client) (4.6)\n",
-      "Requirement already satisfied: pyasn1-modules>=0.0.5 in c:\\users\\strelokask\\anaconda3\\lib\\site-packages (from oauth2client) (0.2.8)\n"
+      "Requirement already satisfied: oauth2client in c:\\programdata\\anaconda3\\lib\\site-packages (4.1.3)Note: you may need to restart the kernel to use updated packages.\n",
+      "Requirement already satisfied: rsa>=3.1.4 in c:\\programdata\\anaconda3\\lib\\site-packages (from oauth2client) (4.6)\n",
+      "Requirement already satisfied: httplib2>=0.9.1 in c:\\programdata\\anaconda3\\lib\\site-packages (from oauth2client) (0.18.1)\n",
+      "Requirement already satisfied: pyasn1-modules>=0.0.5 in c:\\programdata\\anaconda3\\lib\\site-packages (from oauth2client) (0.2.8)\n",
+      "Requirement already satisfied: pyasn1>=0.1.7 in c:\\programdata\\anaconda3\\lib\\site-packages (from oauth2client) (0.4.8)\n",
+      "Requirement already satisfied: six>=1.6.1 in c:\\programdata\\anaconda3\\lib\\site-packages (from oauth2client) (1.15.0)\n",
+      "\n"
      ]
     }
    ],
@@ -154,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
