--- a/google-api-test.ipynb
+++ b/google-api-test.ipynb
@@ -108,8 +108,8 @@
     "    for item in items:\n",
     "        if folder_id == item['id']:\n",
     "            if \"parents\" in item:\n",
-    "                return find_full_path(items, item['parents'][0], item['name']+'/'+ res)\n",
-    "            return item['name']+'/'+ res\n",
+    "                return find_full_path(items, item['parents'][0], (item['name']+'/'+ res[0], res[1] + 1))\n",
+    "            return (item['name']+'/'+ res[0], res[1] + 1)\n",
     "    return res"
    ]
   },
@@ -150,18 +150,14 @@
     "root_folders = []\n",
     "\n",
     "for f in all_folders:\n",
-    "    c = 0\n",
     "    if len(f['images']) > 0:\n",
-    "        full_path = find_full_path(results['files'], f['folder_id'], '')\n",
-    "        print(full_path)\n",
+    "        full_path, count = find_full_path(results['files'], f['folder_id'], ('', 0))\n",
     "        for img in f['images']:\n",
     "            full_path_image.append(['gs://project/' + str(full_path) + img + ', ' + f['folder_name']])\n",
-    "    else:\n",
-    "        path = find_full_path(results['files'], f['folder_id'], '')\n",
-    "        for char in path:\n",
-    "            if char == '/':\n",
-    "                c += 1\n",
-    "        if c == 4:\n",
+    "for f in all_folders:\n",
+    "    if len(f['images']) == 0:\n",
+    "        path, count_f = find_full_path(results['files'], f['folder_id'], ('', 0))\n",
+    "        if count_f == count:\n",
     "            full_path_empty_folder.append([path[:-1]])"
    ]
   },
