--- a/download_img_url.ipynb
+++ b/download_img_url.ipynb
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,65 +163,69 @@
     "    ranges = [folder_name + '!' + folder_start + ':' + range_]  \n",
     "    sheet_values = get_values(ranges, spreadsheet_id)\n",
     "    for elem in sheet_values:  \n",
+    "        excess = 1\n",
     "        path_of_directory = path_of_directory_root + elem[0]\n",
     "        folders.append(elem[0])\n",
     "        if os.path.exists(path_of_directory):\n",
     "            print(\"Указанный файл существует\") \n",
     "        else:\n",
     "            os.mkdir(path_of_directory)\n",
+    "        count = len(elem) - 1\n",
     "        for i in range(1, count):\n",
     "            url = 'http://' + elem[i]\n",
     "            try:\n",
     "                response = requests.get(url)\n",
     "                response.raise_for_status()\n",
     "            except HTTPError as http_err:\n",
+    "                count -= 1\n",
     "                print(f'HTTP error occurred: {http_err}')\n",
     "            except Exception as err:\n",
+    "                count -= 1\n",
     "                print(f'Other error occurred: {err}')\n",
     "            else:\n",
     "                path_for_image = path_of_directory + '/' + str(i) + '.jpg'\n",
     "                with open(path_for_image, \"wb\") as f:\n",
     "                    f.write(response.content)\n",
-    "        count_img.append(len(elem) - 1)\n",
+    "        count_img.append(count)\n",
     "    count_all_img.append(count_img)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"folders = []\n",
+    "folders = []\n",
+    "path_for_image =''\n",
     "count_all_img = []\n",
+    "url_list = []\n",
     "for folder_name in sheet_name:  \n",
     "    count_img = []    \n",
+    "    excess = 1\n",
     "    path_of_directory_root = path_folder_for_zip + '/' + folder_name + '/'\n",
     "    ranges = [folder_name + '!' + folder_start + ':' + range_]  \n",
     "    sheet_values = get_values(ranges, spreadsheet_id)\n",
     "    for elem in sheet_values:\n",
-    "        count_img.append(len(elem) - 1)\n",
+    "        count = len(elem) - 1\n",
+    "        for i in range(1, count):\n",
+    "            if len(elem[i]) < 1:\n",
+    "                count -= 1\n",
+    "        count_img.append(count)\n",
     "    count_all_img.append(count_img)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "for i in range(len(sheet_name)):\n",
     "    count = str(len(count_all_img[i]) + 1)\n",
-    "    range_sheet = sheet_name[i] + '!' + url_end_ + url_start_row + ':' + url_end_ + count\n",
+    "    range_sheet = sheet_name[i] + '!' + url_end_ + url_start_row + ':' + url_end_ + '3'\n",
     "    update_values(range_sheet, [count_all_img[i]], spreadsheet_id, service)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
