--- a/google-api-test.ipynb
+++ b/google-api-test.ipynb
@@ -39,130 +39,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from google.oauth2 import service_account\n",
-    "from googleapiclient.discovery import build\n",
-    "import pprint\n",
-    "pp = pprint.PrettyPrinter(indent=4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "SCOPES = ['https://www.googleapis.com/auth/drive']\n",
-    "SERVICE_ACCOUNT_FILE = 'task1-read.json'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "credentials = service_account.Credentials.from_service_account_file(\n",
-    "        SERVICE_ACCOUNT_FILE, scopes=SCOPES)\n",
-    "service = build('drive', 'v3', credentials=credentials)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results = service.files().list(pageSize=10,\n",
-    "                               fields=\"nextPageToken, files(id, name, mimeType, parents)\").execute()\n",
-    "nextPageToken = results.get('nextPageToken')\n",
-    "while nextPageToken:\n",
-    "        nextPage = service.files().list(pageSize=10,\n",
-    "                                        fields=\"nextPageToken, files(id, name, mimeType, parents)\",\n",
-    "                                        pageToken=nextPageToken).execute()\n",
-    "        nextPageToken = nextPage.get('nextPageToken')\n",
-    "        results['files'] = results['files'] + nextPage['files']\n",
-    "all_folders = [];\n",
-    "for res in results['files']:\n",
-    "    if res['mimeType'] == 'application/vnd.google-apps.folder':\n",
-    "        dict={}\n",
-    "        dict['folder_id'] = res['id']\n",
-    "        dict['folder_name'] = res['name']\n",
-    "        dict['images'] = []\n",
-    "        for obj in results['files']:\n",
-    "            if obj['mimeType'].startswith('image/') and obj['parents'] == [res['id']]:\n",
-    "                dict['images'].append(obj['name'])\n",
-    "        all_folders.append(dict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def find_full_path(items, folder_id, res):\n",
-    "    for item in items:\n",
-    "        if folder_id == item['id']:\n",
-    "            if \"parents\" in item:\n",
-    "                return find_full_path(items, item['parents'][0], (item['name']+'/'+ res[0], res[1] + 1))\n",
-    "            return (item['name']+'/'+ res[0], res[1] + 1)\n",
-    "    return res"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "List1/Sphera Bold/women/Alpha-W-6/\n",
-      "List1/Sphera Bold/women/Alpha-W-7/\n",
-      "List1/Sphera Bold/women/Zeta-W-5/\n",
-      "List1/Sphera Bold/toddler/Alpha-T-8/\n",
-      "List1/Sphera Bold/toddler/Alpha-T-9/\n",
-      "List1/Sphera Bold/women/Delta-W-1/\n",
-      "List1/Sphera Bold/toddler/Zeta-T-8/\n",
-      "List1/Sphera Bold/men/Alpha-M-2/\n",
-      "List1/Sphera Bold/toddler/Beta-T-4/\n",
-      "List1/Sphera Bold/men/Zeta-M-2/\n",
-      "List1/Sphera Bold/men/Zeta-M-4/\n",
-      "List1/Sphera Bold/men/Alpha-M-4/\n",
-      "List1/Sphera Bold/men/Alpha-M-5/\n",
-      "List1/Sphera Bold/men/Alpha-M-3/\n",
-      "List1/Sphera Bold/men/Zeta-M-3/\n",
-      "List1/Sphera Bold/men/Zeta-M-1/\n",
-      "List1/Sphera Bold/men/Beta-M-3/\n",
-      "List1/Sphera Bold/men/Alpha-M-1/\n",
-      "List1/Sphera Bold/men/Beta-M-2/\n"
-     ]
-    }
-   ],
-   "source": [
-    "full_path_image, full_path_empty_folder = [], []\n",
-    "path_for_ = []\n",
-    "root_folders = []\n",
-    "\n",
-    "for f in all_folders:\n",
-    "    if len(f['images']) > 0:\n",
-    "        full_path, count = find_full_path(results['files'], f['folder_id'], ('', 0))\n",
-    "        for img in f['images']:\n",
-    "            full_path_image.append(['gs://project/' + str(full_path) + img + ', ' + f['folder_name']])\n",
-    "for f in all_folders:\n",
-    "    if len(f['images']) == 0:\n",
-    "        path, count_f = find_full_path(results['files'], f['folder_id'], ('', 0))\n",
-    "        if count_f == count:\n",
-    "            full_path_empty_folder.append([path[:-1]])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
@@ -186,12 +62,135 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from google.oauth2 import service_account\n",
+    "from googleapiclient.discovery import build\n",
+    "import pprint\n",
+    "import httplib2 \n",
+    "from oauth2client.service_account import ServiceAccountCredentials\n",
+    "pp = pprint.PrettyPrinter(indent=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SCOPES = ['https://www.googleapis.com/auth/drive']\n",
+    "SERVICE_ACCOUNT_FILE = 'test_read.json'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "credentials = service_account.Credentials.from_service_account_file(\n",
+    "        SERVICE_ACCOUNT_FILE, scopes=SCOPES)\n",
+    "service = build('drive', 'v3', credentials=credentials)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SCOPES_W = ['https://www.googleapis.com/auth/spreadsheets', 'https://www.googleapis.com/auth/drive']\n",
+    "SERVICE_ACCOUNT_FILE_W = 'task1-write.json'\n",
+    "spreadsheet_id = '1iQbN27tx6WeVWYrVPu7QdYLNzTNlnMvwU7n7iyxs1-U'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w_credentials = ServiceAccountCredentials.from_json_keyfile_name(\n",
+    "        SERVICE_ACCOUNT_FILE_W, scopes=SCOPES_W)\n",
+    "httpAuth = w_credentials.authorize(httplib2.Http())\n",
+    "w_service = build('sheets', 'v4', http = httpAuth)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = service.files().list(pageSize=1000,\n",
+    "                               fields=\"nextPageToken, files(id, name, mimeType, parents)\").execute()\n",
+    "nextPageToken = results.get('nextPageToken')\n",
+    "while nextPageToken:\n",
+    "        nextPage = service.files().list(pageSize=1000,\n",
+    "                                        fields=\"nextPageToken, files(id, name, mimeType, parents)\",\n",
+    "                                        pageToken=nextPageToken).execute()\n",
+    "        nextPageToken = nextPage.get('nextPageToken')\n",
+    "        results['files'] = results['files'] + nextPage['files']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_folders, delete_files = [], []\n",
+    "for res in results['files']:\n",
+    "    if res['mimeType'] == 'application/vnd.google-apps.folder':\n",
+    "        dictr={}\n",
+    "        dictr['folder_id'] = res['id']\n",
+    "        dictr['folder_name'] = res['name']\n",
+    "        dictr['images'] = []\n",
+    "        dictr['ini_format'] = []\n",
+    "        for obj in results['files']:\n",
+    "            if 'parents' in obj.keys():\n",
+    "                if obj['mimeType'].startswith('image/') and obj['parents'] == [res['id']]:\n",
+    "                    dictr['images'].append(obj['name'])\n",
+    "        all_folders.append(dictr)\n",
+    "    if res['mimeType'] != 'application/vnd.google-apps.folder' and not(res['mimeType'].startswith('image/')):\n",
+    "        dictr={}\n",
+    "        dictr['folder_id'] = res['id']\n",
+    "        dictr['folder_name'] = res['name']\n",
+    "        delete_files.append(dictr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_full_path(items, folder_id, res):\n",
+    "    for item in items:\n",
+    "        if folder_id == item['id']:\n",
+    "            if \"parents\" in item:\n",
+    "                return find_full_path(items, item['parents'][0], (item['name']+'/'+ res[0], res[1] + 1))\n",
+    "            return (item['name']+'/'+ res[0], res[1] + 1)\n",
+    "    return res"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import httplib2 \n",
-    "from oauth2client.service_account import ServiceAccountCredentials"
+    "full_path_image, full_path_empty_folder, data_for_page, files_for_delete = [], [], [], []\n",
+    "\n",
+    "for f in all_folders:\n",
+    "    if len(f['images']) > 0:\n",
+    "        full_path, count = find_full_path(results['files'], f['folder_id'], ('', 0))\n",
+    "        for img in f['images']:\n",
+    "            full_path_image.append(['gs://project/' + str(full_path) + img + ', ' + f['folder_name']])\n",
+    "            \n",
+    "data_for_page.append(full_path_image)"
    ]
   },
   {
@@ -200,9 +199,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SCOPES_W = ['https://www.googleapis.com/auth/spreadsheets', 'https://www.googleapis.com/auth/drive']\n",
-    "SERVICE_ACCOUNT_FILE_W = 'task1-write.json'\n",
-    "spreadsheet_id = '1rcyTVLcXprdkzK6mbbl-SGKxnL75dOpEoA3XfNPQEx8'"
+    "for f in all_folders:\n",
+    "    if len(f['images']) == 0:\n",
+    "        path, count_f = find_full_path(results['files'], f['folder_id'], ('', 0))\n",
+    "        if count_f == count:\n",
+    "            full_path_empty_folder.append([path[:-1]])\n",
+    "    if f['folder_name'].lower() == 'новая папка':\n",
+    "        path, _ = find_full_path(results['files'], f['folder_id'], ('', 0))\n",
+    "        files_for_delete.append(path)\n",
+    "        \n",
+    "data_for_page.append(full_path_empty_folder)"
    ]
   },
   {
@@ -211,10 +217,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "w_credentials = ServiceAccountCredentials.from_json_keyfile_name(\n",
-    "        SERVICE_ACCOUNT_FILE_W, scopes=SCOPES_W)\n",
-    "httpAuth = w_credentials.authorize(httplib2.Http())\n",
-    "w_service = build('sheets', 'v4', http = httpAuth)"
+    "for f in delete_files:\n",
+    "    path, count_f = find_full_path(results['files'], f['folder_id'], ('', 0))\n",
+    "    files_for_delete.append(path[:-1])"
    ]
   },
   {
@@ -237,20 +242,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "range_sheet = str(sheet_name[1]) + '!A1:A'+str(len(full_path_image))\n",
-    "range_sheet_empty_folder = str(sheet_name[2]) + '!A1:A'+str(len(full_path_empty_folder))\n",
-    "values = w_service.spreadsheets().values().batchUpdate(spreadsheetId = spreadsheet_id,\n",
+    "def update_value(data):\n",
+    "    values = w_service.spreadsheets().values().batchUpdate(spreadsheetId = spreadsheet_id,\n",
     "                                                       body = {'valueInputOption':'USER_ENTERED',\n",
-    "                                                               'data' : [{'range': range_sheet,\n",
-    "                                                                          'majorDimension':'ROWS',\n",
-    "                                                                          'values': full_path_image\n",
-    "                                                                          },\n",
-    "                                                                         {'range': range_sheet_empty_folder,\n",
-    "                                                                          'majorDimension':'ROWS',\n",
-    "                                                                          'values': full_path_empty_folder\n",
-    "                                                                          }]\n",
-    "                                                              }\n",
-    "                                                      ).execute()"
+    "                                                               'data' : data\n",
+    "                                                              }).execute()\n",
+    "    return values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_data(sheet_name, rang_start, data_for_page, majorDimension = 'ROWS'):\n",
+    "    data = []\n",
+    "    for i in range(len(sheet_name)):\n",
+    "        dictr = {}\n",
+    "        dictr['range'] = sheet_name[i] + rang_start + str(len(data_for_page[i]))\n",
+    "        dictr['majorDimension'] = majorDimension\n",
+    "        dictr['values'] = data_for_page[i]\n",
+    "        data.append(dictr)\n",
+    "    return data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = create_data(sheet_name, '!A1:A', data_for_page)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val = update_value(data)"
    ]
   }
  ],
